<resources>
    <string name="app_name">AllianceTekPractical</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid user email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="signup">SignUp</string>
    <string name="enter_firstname">Enter first name</string>
    <string name="enter_lastname">Enter last name</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="userlist">Users list</string>
    <string name="photos">Photos</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="choose_image_from">Choose image from</string>
    <string name="image_path_is_not_valid">Image path not valid</string>
    <string name="upload">Upload</string>
    <string name="select_image_msg">Click on image and select your image to upload</string>
    <string name="select_image">Please select image</string>

    <string name="log_out_msg">Are you sure want to sign out?</string>
    <string name="sign_out">Sign Out</string>
    <string name="please_click_back_again_to_exit">Please click BACK again to exit</string>
    <string name="image_uploaded_successfully">Image uploaded successfully</string>
    <string name="data_not_added">User not added</string>
    <string name="data_added">User added</string>

</resources>