<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <include
        android:id="@+id/layoutLoginHeader"
        layout="@layout/common_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedRegister"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutLoginHeader">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_10sdp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_15sdp"
                style="@style/signUpEditTextInputLayout"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edRegisterUserEmail"
                    style="@style/signUpEditText"
                    android:state_window_focused="true"
                    android:imeOptions="actionNext"
                    android:transformPivotY="@dimen/_10sdp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:layoutDirection="locale"
                    android:focusable="true">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_15sdp"
                style="@style/signUpEditTextInputLayout"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edRegisterPassword"
                    style="@style/signUpEditText"
                    android:state_window_focused="true"
                    android:imeOptions="actionDone"
                    android:transformPivotY="@dimen/_10sdp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layoutDirection="locale"
                    android:focusable="true">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/tvLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:enabled="false"
                android:padding="@dimen/_10sdp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDontHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dont_have_an_account"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/textBlack"
                android:layout_marginTop ="@dimen/_20sdp"
                app:layout_constraintBottom_toTopOf="@+id/tvSignUp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>


    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>